--- a/iglea-sitefinal-mariaeduardabotan-main/index.html
+++ b/iglea-sitefinal-mariaeduardabotan-main/index.html
@@ -96,6 +96,10 @@
                 <!-- 2º coluna -->
                 <img src="img/Angular.svg" class="descrição__imagem">
             </div>
+            <!--2 linha-->
+        <div class="card__botões">
+            <!--1 coluna-->
+            <li class="botões__item"><img src="img/favoritos.svg" alt="favoritar livro"</li>
 
             
         </div>
